--- a/Game/Server/Server.vcxproj
+++ b/Game/Server/Server.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="InGameThread.cpp" />
     <ClCompile Include="LockQueue.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -137,6 +138,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InGameThread.h" />
     <ClInclude Include="LockQueue.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Types.h" />
