--- a/Game/Server/Server.vcxproj
+++ b/Game/Server/Server.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ClientServerThread.cpp" />
     <ClCompile Include="InGameThread.cpp" />
     <ClCompile Include="LockQueue.cpp" />
     <ClCompile Include="main.cpp" />
@@ -138,6 +139,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ClientServerThread.h" />
     <ClInclude Include="InGameThread.h" />
     <ClInclude Include="LockQueue.h" />
     <ClInclude Include="stdafx.h" />
