--- a/Game/Server/Server.vcxproj.filters
+++ b/Game/Server/Server.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="InGameThread.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ClientServerThread.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LockQueue.h">
@@ -39,6 +42,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="InGameThread.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ClientServerThread.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
