--- a/Game/Server/Server.vcxproj
+++ b/Game/Server/Server.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="ClientServerThread.cpp" />
     <ClCompile Include="InGameThread.cpp" />
+    <ClCompile Include="LobbyThread.cpp" />
     <ClCompile Include="LockQueue.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -141,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="ClientServerThread.h" />
     <ClInclude Include="InGameThread.h" />
+    <ClInclude Include="LobbyThread.h" />
     <ClInclude Include="LockQueue.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Types.h" />
