--- a/Game/Server/Server.vcxproj.filters
+++ b/Game/Server/Server.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ClientServerThread.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LobbyThread.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LockQueue.h">
@@ -45,6 +48,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="ClientServerThread.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="LobbyThread.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
