--- a/Game/Client/Client.vcxproj.filters
+++ b/Game/Client/Client.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="src\PacketManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\Global.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.h">
@@ -153,6 +156,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="src\PacketManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Global.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
