--- a/Game/Client/Client.vcxproj
+++ b/Game/Client/Client.vcxproj
@@ -184,9 +184,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)api\core\lib;$(ProjectDir)api\studio\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)api\OpenGL\lib;$(ProjectDir)api\core\lib;$(ProjectDir)api\studio\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>glew32.lib freeglut.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>$(ProjectDir)api\core\lib\x64\fmod_vc.lib;$(ProjectDir)api\core\lib\x64\fmodL_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudio_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudioL_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)api\core\lib\x64\fmod_vc.lib;$(ProjectDir)api\core\lib\x64\fmodL_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudio_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudioL_vc.lib;$(ProjectDir)api\OpenGL\lib\glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -204,8 +204,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)api\core\lib;$(ProjectDir)api\studio\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(ProjectDir)api\core\lib\x64\fmod_vc.lib;$(ProjectDir)api\core\lib\x64\fmodL_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudio_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudioL_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)api\OpenGL\lib;$(ProjectDir)api\core\lib;$(ProjectDir)api\studio\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(ProjectDir)api\core\lib\x64\fmod_vc.lib;$(ProjectDir)api\core\lib\x64\fmodL_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudio_vc.lib;$(ProjectDir)api\studio\lib\x64\fmodstudioL_vc.lib;$(ProjectDir)api\OpenGL\lib\glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>glew32.lib freeglut.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
