--- a/Game/Client/Client.vcxproj.filters
+++ b/Game/Client/Client.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="src\Global.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\stdafx.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.h">
