feat: 시작 시 대화상자를 통해 IP를 입력 받고 접속을 시도할 수 있도록 변경
- LPARAM 값을 char* 로 변경하기 위한 함수 PacketManager에 static inline 으로 선언 LPARAMToCharPtr()
- 실제 게임 클라이언트가 초기화 되기 전에 대화상자를 생성하고 '접속'을 할 때까지 대기

--- a/Game/Client/Client.vcxproj.filters
+++ b/Game/Client/Client.vcxproj.filters
@@ -164,6 +164,9 @@
     <ClInclude Include="src\Global.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shader.frag">
@@ -172,5 +175,10 @@
     <None Include="res\shader.vert">
       <Filter>리소스 파일</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Client.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
