--- a/Game/Client/Client.vcxproj
+++ b/Game/Client/Client.vcxproj
@@ -46,6 +46,7 @@
     <ClCompile Include="src\wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\bg.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\easyStage.h" />
@@ -74,6 +75,9 @@
   <ItemGroup>
     <None Include="res\shader.frag" />
     <None Include="res\shader.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Client.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
